<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/app_guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="12dp" />

        <ImageView
            android:id="@+id/artist_view_img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_gravity="top"
            android:scaleType="centerCrop"
            android:src="@drawable/artist"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="1dp" />

        <ImageView
            android:id="@+id/artist_view_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:src="@drawable/back_icon"
            app:layout_constraintLeft_toLeftOf="@id/artist_view_img"
            app:layout_constraintTop_toTopOf="@id/app_guideline_top" />

        <TextView
            android:id="@+id/artist_view_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="@id/artist_view_img"
            app:layout_constraintRight_toRightOf="@id/artist_view_img"
            app:layout_constraintTop_toTopOf="@id/app_guideline_top" />


        <ImageView
            android:id="@+id/artist_view_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:background="@drawable/circle"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintRight_toRightOf="@id/artist_view_img"
            app:layout_constraintTop_toTopOf="@id/app_guideline_top" />

        <ImageView
            android:id="@+id/artist_view_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="11dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="@id/artist_view_like"
            app:layout_constraintRight_toRightOf="@id/artist_view_like" />


        <LinearLayout
            android:id="@+id/artist_view_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/artist_view_img"
            app:layout_constraintLeft_toLeftOf="@id/artist_view_img">

            <TextView
                android:id="@+id/artist_view_description_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nom de l'artiste"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/artist_view_description_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nom de l'artiste"
                android:textColor="@color/white"
                android:textSize="13dp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toBottomOf="@id/artist_view_img">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/artist_view_bio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Lorem"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/text_margin" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_space" />

                <TextView
                    android:id="@+id/artist_view_album_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/semi_common_space"
                    android:text="@string/searching_body_albums"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sub_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_space" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/artist_albums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/list_item_album" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorites_tracks"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sub_title" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_space" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/artist_fav_tracks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:listitem="@layout/list_item_album" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
